addons/kyverno/policies/medtech-onc_cures_api_fhir_r4-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-onc_cures_api_fhir_r4
  annotations:
    rulehub.id: medtech.onc_cures_api_fhir_r4
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: medtech.onc_cures_api_fhir_r4: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
